<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('components', function (Blueprint $table) {
            $table->id();
            $table->string('name');
            $table->integer('energy');
            $table->integer('space');
            $table->integer('price');
            $table->string('source')->nullable();
            $table->foreignId('component_type_id')->constrained()->cascadeOnDelete();
            $table->boolean('is_archaotech')->default(false);
            $table->boolean('is_xenotech')->default(false);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('components');
    }
};
